--- a/showinterface.yml
+++ b/showinterface.yml
@@ -1,9 +1,9 @@
 ---
 - name: demo
-  hosts: Switch
+  hosts: inventories_switch
 
   tasks:
-    - name: run show version on remote devices
+    - name: run show interface on remote devices
       ios_command:
         commands: show int status
       register: demo
