--- a/showinterface.yml
+++ b/showinterface.yml
@@ -4,7 +4,7 @@
 
   tasks:
     - name: run show interface on remote devices
-      ios_command:
+      os10_command:
         commands: show int status
       register: demo
     - debug: var=demo.stdout_lines
