--- a/showinterface.yml
+++ b/showinterface.yml
@@ -1,9 +1,10 @@
 ---
 - name: demo
-  hosts: inventories_switch
+  hosts: Switch
 
-- name: run show version on remote devices
-    os6_command:
-      commands: show version
+  tasks:
+    - name: run show version on remote devices
+      os6_command:
+        commands: show int status
       register: demo
     - debug: var=demo.stdout_lines
